Added script to autogenerate a38tool.md

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,5 +4,6 @@ include README.md
 include doc/README.md
 include tests/*.py
 include download-docs
+include document-a38
 include test-parse
 include test-coverage
