--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,8 @@ include LICENSE
 include README.md
 include doc/README.md
 include tests/*.py
+include stubs/*.pyi
+include stubs/dateutil/*.pyi
 include download-docs
 include document-a38
 include test-parse
