Implemented rendering to HTML or PDF

--- a/debian/control
+++ b/debian/control
@@ -4,14 +4,14 @@ Priority: optional
 Maintainer: Enrico Zini <enrico@debian.org>
 Build-Depends: debhelper (>= 9), dh-python,
                python3-all,
-               python3-dateutil, python3-tz, python3-asn1crypto
+               python3-dateutil, python3-tz, python3-asn1crypto, python3-lxml
 Standards-Version: 4.2.0
 
 Package: python3-a38
 Architecture: all
 Depends: ${misc:Depends}, ${python3:Depends},
          python3-dateutil, python3-tz, python3-asn1crypto,
-Recommends: ${python3:Recommends}, python3-yapf
+Recommends: ${python3:Recommends}, python3-yapf, python3-lxml, wkhtmltopdf
 Suggests: ${python3:Suggests}
 Description: parse and generate Italian Fattura Elettronica
  This library implements a declarative data model similar to Django models,
