--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,7 @@ include LICENSE
 include README.md
 include doc/README.md
 include tests/*.py
+include tests/data/*
 include stubs/*.pyi
 include stubs/dateutil/*.pyi
 include download-docs
