--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -1,8 +1,8 @@
 ---
 name: Python A38
 
-# only manual for now
-on: [workflow_dispatch]
+# only manual and pull requests
+on: [workflow_dispatch, pull_request]
 
 jobs:
   build:
