--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
+      - name: Work around Apt caching issues
+        run: make ci-workaround
       - name: Install OS packages
         run: make install-os
       - name: Install Pip packages
