--- a/.github/workflows/py.yml
+++ b/.github/workflows/py.yml
@@ -1,8 +1,15 @@
 ---
 name: Python A38
 
-# only manual and pull requests
-on: [workflow_dispatch, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+  # invoke the pipeline manually
+  workflow_dispatch:
 
 jobs:
   build:
